Se agrega la foto de perfil para mostrar en la pagina inicial y se corrige la informacion sobre el propietario del perfil

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ Released   : 20130902
 	<div id="header">
 		<div id="logo">
 			<img src="images/pic02.jpg" alt="" />
-			<h1><a href="#">Privy</a></h1>
-			<span>Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a></span>
+			<h1><a href="#">Sebastian Reyes Espinosa</a></h1>
+			<span>Direccionamiento Estrategico</span>
 		</div>
 		<div id="menu">
 			<ul>
