Se realiza un pequeño cambio a index.html para incorporar nombres de redes sociales dentro del menu lateral

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@ Released   : 20130902
 		</div>
 		<div id="menu">
 			<ul>
-				<li class="current_page_item"><a href="#" accesskey="1" title="">Homepage</a></li>
-				<li><a href="#" accesskey="2" title="">Our Clients</a></li>
-				<li><a href="#" accesskey="3" title="">About Us</a></li>
-				<li><a href="#" accesskey="4" title="">Careers</a></li>
-				<li><a href="#" accesskey="5" title="">Contact Us</a></li>
+				<li class="current_page_item"><a href="#" accesskey="1" title="">Google+</a></li>
+				<li><a href="#" accesskey="2" title="">Twitter</a></li>
+				<li><a href="#" accesskey="3" title="">LinkedIN</a></li>
+				<li><a href="#" accesskey="4" title="">GitHub</a></li>
+				<li><a href="#" accesskey="5" title="">Contactame</a></li>
 			</ul>
 		</div>
 	</div>
