Se modifica ligeramente el diseño de los menus para incluir paginas adicionales con contenido y se crea el boceto de los enlaces a redes sociales

--- a/index.html
+++ b/index.html
@@ -33,11 +33,19 @@ Released   : 20130902
 		</div>
 		<div id="menu">
 			<ul>
-				<li class="current_page_item"><a href="#" accesskey="1" title="">Google+</a></li>
-				<li><a href="#" accesskey="2" title="">Twitter</a></li>
-				<li><a href="#" accesskey="3" title="">LinkedIN</a></li>
-				<li><a href="#" accesskey="4" title="">GitHub</a></li>
+				<li class="current_page_item"><a href="#" accesskey="1" title="">Inicio</a></li>
+				<li><a href="#" accesskey="2" title="">Mi Experiencia</a></li>
+				<li><a href="#" accesskey="3" title="">Mis Proyectos</a></li>
+				<li><a href="#" accesskey="4" title="">Mis Estudios</a></li>
 				<li><a href="#" accesskey="5" title="">Contactame</a></li>
+			</ul>
+		</div>
+		<div id="redes_sociales">
+			<ul>
+				<li><a href="https://plus.google.com/+SebastianReyesEspinosa/about" title="">Google+</a></li>
+				<li><a href="https://twitter.com/SebastianReyesE" title="">Twitter</a></li>
+				<li><a href="https://co.linkedin.com/pub/sebastian-reyes-espinosa/21/907/323" title="">LinkedIN</a></li>
+				<li><a href="https://github.com/sebastian-code" title="">GitHub</a></li>
 			</ul>
 		</div>
 	</div>
