--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@ Released   : 20130902
 		</div>
 		<div id="welcome">
 			<div class="title">
-				<h2>Fusce ultrices fringilla metus</h2>
-				<span class="byline">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue</span>
+				<h2>Perfil Profesional</h2>
+				<span class="byline">Siempre en la busqueda de nuevos desafios personales y profesionales</span>
 			</div>
 			<p>This is <strong>Privy</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
 			<ul class="actions">
