--- a/index.html
+++ b/index.html
@@ -31,15 +31,6 @@ Released   : 20130902
 			<h1><a href="#">Sebastian Reyes Espinosa</a></h1>
 			<span>Direccionamiento Estrategico</span>
 		</div>
-		<div id="social_network">
-			<ul>
-				<li><a alt="Google+" href="https://plus.google.com/+SebastianReyesEspinosa/about" title=""><img src="icons/google110.png"/></a></li>
-				<li><a alt="Twitter" href="https://twitter.com/SebastianReyesE" title=""><img src="icons/twitter12.png"/></a></li>
-				<li><a alt="LinkedIN" href="https://co.linkedin.com/pub/sebastian-reyes-espinosa/21/907/323" title=""><img src="icons/linkedin2.png"/></a></li>
-				<li><a alt="GitHub" href="https://github.com/sebastian-code" title=""><img src="icons/github3.png"/></a></li>
-				<li><a alt="blogroll" href="https://construyendomiopinion.wordpress.com/" title=""/><img src="icons/social70.png"/></a></li>
-			</ul>
-		</div>
 		<div id="menu">
 			<ul>
 				<li class="current_page_item"><a href="#" accesskey="1" title="">Inicio</a></li>
@@ -58,6 +49,15 @@ Released   : 20130902
 			<div class="title">
 				<h2>Perfil Profesional</h2>
 				<span class="byline">Siempre en la busqueda de nuevos desafios personales y profesionales</span>
+			</div>
+			<div id="social_network">
+				<ul>
+					<li><a alt="Google+" href="https://plus.google.com/+SebastianReyesEspinosa/about" title=""><img src="icons/google110.png"/></a></li>
+					<li><a alt="Twitter" href="https://twitter.com/SebastianReyesE" title=""><img src="icons/twitter12.png"/></a></li>
+					<li><a alt="LinkedIN" href="https://co.linkedin.com/pub/sebastian-reyes-espinosa/21/907/323" title=""><img src="icons/linkedin2.png"/></a></li>
+					<li><a alt="GitHub" href="https://github.com/sebastian-code" title=""><img src="icons/github3.png"/></a></li>
+					<li><a alt="BlogRoll" href="https://contruyendomiopinion.wordpress.com" title=""><img src="icons/social70.png"/></a></li>
+				</ul>
 			</div>
 			<p>Soy un profesional formado en la administración efectiva de los recursos organizacionales y enfocado en la planeación estratégica de los esfuerzos corporativos. A lo largo de mi carrera me he desempeñado en diferentes sectores productivos, principalmente en los sectores defensa, financiero, BPO&O y TIC's, donde he llevado exitosas relaciones comerciales y profesionales en el entorno público y privado, tanto a niveles ejecutivos como gerenciales, potenciando mis habilidades en el manejo de las relaciones publicas, afianzando mis conocimientos y adquiriendo invaluable experiencia en planeación estratégica, dirección de proyectos, liderazgo de equipos interdisciplinarios y gestión integral de riesgo, así como en la gestión eficiente de los recursos financieros, humanos y tecnológicos de las organizaciones.</p>
 			<p>Como profesional poseo capacidad de gestión, criterio para la toma de decisiones, capacidad de trabajo bajo presión, habilidad para transmitir mi mensaje y flexibilidad ante las circunstancias; como persona soy confiable, ético, responsable y abierto a la actualización tecnológica. </p>
