Se eliminan algunos archivos por innecesarios dentro del esquema, se crean las paginas adicionales que contendran la informacion complementaria sobre el perfil: Experiencia Proyectos Estudios Y para terminar se arreglan todos los enlaces que conectan los diferentes recursos, usando enlaces relativos

--- a/pages/academic_background.html
+++ b/pages/academic_background.html
@@ -17,8 +17,8 @@ Released   : 20130902
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
-<link href="default.css" rel="stylesheet" type="text/css" media="all" />
-<link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
+<link href="../default.css" rel="stylesheet" type="text/css" media="all" />
+<link href="../fonts.css" rel="stylesheet" type="text/css" media="all" />
 
 <!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
 
@@ -27,16 +27,16 @@ Released   : 20130902
 <div id="page" class="container">
 	<div id="header">
 		<div id="logo">
-			<img src="images/profile_pic.jpg" alt="" />
+			<img src="../images/profile_pic.jpg" alt="" />
 			<h1><a href="#">Sebastian Reyes Espinosa</a></h1>
 			<span>Direccionamiento Estrategico</span>
 		</div>
 		<div id="menu">
 			<ul>
-				<li class="current_page_item"><a href="#" accesskey="1" title="">Inicio</a></li>
-				<li><a href="pages/experience.html" accesskey="2" title="">Mi Experiencia</a></li>
-				<li><a href="pages/projects.html" accesskey="3" title="">Mis Proyectos</a></li>
-				<li><a href="pages/academic_background.html" accesskey="4" title="">Mis Estudios</a></li>
+				<li><a href="../index.html" accesskey="1" title="">Inicio</a></li>
+				<li><a href="experience.html" accesskey="2" title="">Mi Experiencia</a></li>
+				<li><a href="projects.html" accesskey="3" title="">Mis Proyectos</a></li>
+				<li class="current_page_item"><a href="#" accesskey="4" title="">Mis Estudios</a></li>
 				<li><a href="#" title="">Contactame</a></li>
 			</ul>
 		</div>
@@ -44,19 +44,18 @@ Released   : 20130902
 	<div id="main">
 		<div id="welcome">
 			<div class="title">
-				<h2>Perfil Profesional</h2>
+				<h2>Estudios Academicos</h2>
 				<span class="byline">Siempre en la busqueda de nuevos desafios personales y profesionales</span>
 			</div>
-			<p>Soy un profesional formado en la administración efectiva de los recursos organizacionales y enfocado en la planeación estratégica de los esfuerzos corporativos. A lo largo de mi carrera me he desempeñado en diferentes sectores productivos, principalmente en los sectores defensa, financiero, BPO&O y TIC's, donde he llevado exitosas relaciones comerciales y profesionales en el entorno público y privado, tanto a niveles ejecutivos como gerenciales, potenciando mis habilidades en el manejo de las relaciones publicas, afianzando mis conocimientos y adquiriendo invaluable experiencia en planeación estratégica, dirección de proyectos, liderazgo de equipos interdisciplinarios y gestión integral de riesgo, así como en la gestión eficiente de los recursos financieros, humanos y tecnológicos de las organizaciones.</p>
-			<p>Como profesional poseo capacidad de gestión, criterio para la toma de decisiones, capacidad de trabajo bajo presión, habilidad para transmitir mi mensaje y flexibilidad ante las circunstancias; como persona soy confiable, ético, responsable y abierto a la actualización tecnológica.</p>
+			<p>Aqui listo mis estudios academicos</p>
 		</div>
 		<div id="social_network">
 				<ul>
-					<li><a alt="Google+" href="https://plus.google.com/+SebastianReyesEspinosa/about" title=""><img src="icons/google110.png" width='48' height='48'/></a></li>
-					<li><a alt="Twitter" href="https://twitter.com/SebastianReyesE" title=""><img src="icons/twitter12.png" width='48' height='48'/></a></li>
-					<li><a alt="LinkedIN" href="https://co.linkedin.com/pub/sebastian-reyes-espinosa/21/907/323" title=""><img src="icons/linkedin2.png" width='48' height='48'/></a></li>
-					<li><a alt="GitHub" href="https://github.com/sebastian-code" title=""><img src="icons/github3.png" width='48' height='48'/></a></li>
-					<li><a alt="BlogRoll" href="https://contruyendomiopinion.wordpress.com" title=""><img src="icons/social70.png" width='48' height='48'/></a></li>
+					<li><a alt="Google+" href="https://plus.google.com/+SebastianReyesEspinosa/about" title=""><img src="../icons/google110.png" width='48' height='48'/></a></li>
+					<li><a alt="Twitter" href="https://twitter.com/SebastianReyesE" title=""><img src="../icons/twitter12.png" width='48' height='48'/></a></li>
+					<li><a alt="LinkedIN" href="https://co.linkedin.com/pub/sebastian-reyes-espinosa/21/907/323" title=""><img src="../icons/linkedin2.png" width='48' height='48'/></a></li>
+					<li><a alt="GitHub" href="https://github.com/sebastian-code" title=""><img src="../icons/github3.png" width='48' height='48'/></a></li>
+					<li><a alt="BlogRoll" href="https://contruyendomiopinion.wordpress.com" title=""><img src="../icons/social70.png" width='48' height='48'/></a></li>
 				</ul>
 			</div>
 		<div id="featured">
