--- a/pages/projects.html
+++ b/pages/projects.html
@@ -50,14 +50,14 @@ Released   : 20130902
 			<p>Aca listo los proyectos en los que he participado.</p>
 		</div>
 		<div id="social_network">
-				<ul>
-					<li><a alt="Google+" href="https://plus.google.com/+SebastianReyesEspinosa/about" title=""><img src="../icons/google110.png" width='48' height='48'/></a></li>
-					<li><a alt="Twitter" href="https://twitter.com/SebastianReyesE" title=""><img src="../icons/twitter12.png" width='48' height='48'/></a></li>
-					<li><a alt="LinkedIN" href="https://co.linkedin.com/pub/sebastian-reyes-espinosa/21/907/323" title=""><img src="../icons/linkedin2.png" width='48' height='48'/></a></li>
-					<li><a alt="GitHub" href="https://github.com/sebastian-code" title=""><img src="../icons/github3.png" width='48' height='48'/></a></li>
-					<li><a alt="BlogRoll" href="https://contruyendomiopinion.wordpress.com" title=""><img src="../icons/social70.png" width='48' height='48'/></a></li>
-				</ul>
-			</div>
+			<ul>
+				<li><a alt="Google+" href="https://plus.google.com/+SebastianReyesEspinosa/about" target="_blank" title=""><img src="icons/google110.png" width='48' height='48'/></a></li>
+				<li><a alt="Twitter" href="https://twitter.com/SebastianReyesE" target="_blank" title=""><img src="icons/twitter12.png" width='48' height='48'/></a></li>
+				<li><a alt="LinkedIN" href="https://co.linkedin.com/pub/sebastian-reyes-espinosa/21/907/323" target="_blank" title=""><img src="icons/linkedin2.png" width='48' height='48'/></a></li>
+				<li><a alt="GitHub" href="https://github.com/sebastian-code" target="_blank" title=""><img src="icons/github3.png" width='48' height='48'/></a></li>
+				<li><a alt="BlogRoll" href="https://contruyendomiopinion.wordpress.com" target="_blank" title=""><img src="icons/social70.png" width='48' height='48'/></a></li>
+			</ul>
+		</div>
 		<div id="featured">
 			<div class="title">
 				<h2>Maecenas lectus sapien</h2>
