--- a/pages/experience.html
+++ b/pages/experience.html
@@ -87,8 +87,8 @@ Released   : 20130902
 			</ul>
 		</div>
 		<div id="copyright">
-			<span>&copy; Untitled. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a></span>
-			<span>Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</span>
+			<span>&copy; Sebastian Reyes Espinosa. All rights reserved.</a></span>
+			<span>Design by <a href="http://templated.co" rel="nofollow">Sebastian Reyes</a>.</span>
 		</div>
 	</div>
 </div>
