Se modifica enlace relativo de pies de pagina de las paginas en el bloque de enlaces de redes sociales, que impedia la correcta visualizacion de los iconos

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@ Released   : 20130902
 			</ul>
 		</div>
 		<div id="copyright">
-			<span>&copy; Sebastian Reyes Espinosa. All rights reserved.</a></span>
-			<span>Design by <a href="http://templated.co" rel="nofollow">Sebastian Reyes</a>.</span>
+			<span>&copy; Sebastian Reyes Espinosa. All rights reserved.</span>
+			<span>Design by Sebastian Reyes</span>
 		</div>
 	</div>
 </div>
