--- a/pages/projects.html
+++ b/pages/projects.html
@@ -51,11 +51,11 @@ Released   : 20130902
 		</div>
 		<div id="social_network">
 			<ul>
-				<li><a alt="Google+" href="https://plus.google.com/+SebastianReyesEspinosa/about" target="_blank" title=""><img src="icons/google110.png" width='48' height='48'/></a></li>
-				<li><a alt="Twitter" href="https://twitter.com/SebastianReyesE" target="_blank" title=""><img src="icons/twitter12.png" width='48' height='48'/></a></li>
-				<li><a alt="LinkedIN" href="https://co.linkedin.com/pub/sebastian-reyes-espinosa/21/907/323" target="_blank" title=""><img src="icons/linkedin2.png" width='48' height='48'/></a></li>
-				<li><a alt="GitHub" href="https://github.com/sebastian-code" target="_blank" title=""><img src="icons/github3.png" width='48' height='48'/></a></li>
-				<li><a alt="BlogRoll" href="https://contruyendomiopinion.wordpress.com" target="_blank" title=""><img src="icons/social70.png" width='48' height='48'/></a></li>
+				<li><a alt="Google+" href="https://plus.google.com/+SebastianReyesEspinosa/about" target="_blank" title=""><img src="../icons/google110.png" width='48' height='48'/></a></li>
+				<li><a alt="Twitter" href="https://twitter.com/SebastianReyesE" target="_blank" title=""><img src="../icons/twitter12.png" width='48' height='48'/></a></li>
+				<li><a alt="LinkedIN" href="https://co.linkedin.com/pub/sebastian-reyes-espinosa/21/907/323" target="_blank" title=""><img src="../icons/linkedin2.png" width='48' height='48'/></a></li>
+				<li><a alt="GitHub" href="https://github.com/sebastian-code" target="_blank" title=""><img src="../icons/github3.png" width='48' height='48'/></a></li>
+				<li><a alt="BlogRoll" href="https://contruyendomiopinion.wordpress.com" target="_blank" title=""><img src="../icons/social70.png" width='48' height='48'/></a></li>
 			</ul>
 		</div>
 		<div id="featured">
@@ -87,8 +87,8 @@ Released   : 20130902
 			</ul>
 		</div>
 		<div id="copyright">
-			<span>&copy; Sebastian Reyes Espinosa. All rights reserved.</a></span>
-			<span>Design by <a href="http://templated.co" rel="nofollow">Sebastian Reyes</a>.</span>
+			<span>&copy; Sebastian Reyes Espinosa. All rights reserved.</span>
+			<span>Design by Sebastian Reyes</span>
 		</div>
 	</div>
 </div>
