Se agrega a cada una de las paginas la informacion correspondiente, en estado borrador para avanzar en un siguiente con la estructuracion de acuerdo al concepto empezado

--- a/pages/academic_background.html
+++ b/pages/academic_background.html
@@ -77,6 +77,59 @@ Released   : 20130902
 				</li>
 			</ul>
 		</div>
+		<div>
+			Universidad de León
+			Master, Administracion de Empresas
+			2007 – 2010
+			SENA
+			Lenguajes y técnicas de programación, Tecnologias de la Informacion y las Comunicaciones, Aprendizaje de tecnicas de programacion y lenguajes de desarrollo de software
+			2011 – 2012
+			SENA
+			Introduccion a los Sistemas de Gestion de Calidad, Administracion
+			2007 – 2007
+			SENA
+			Auditorias en Seguridad de la Informacion, Tecnologias de la Informacion y las Telecomunicaciones
+			2011 – 2011
+			SENA
+			Introduccion a entornos Linux, Tecnologias de la informacion y las comunicaciones
+			2007 – 2007
+			Escuela Naval 'Almirante Padilla'
+			Profesional, Ciencias Navales
+			1998 – 2001
+
+			Actividades y asociaciones: Equipo de Voleyball, equipo de velas, grupo de informática, grupo de estudio en tecnología y electrónica
+			Colegio Luis Horacio Gomez
+			Bachiller Academico, Escolaridad Media
+			1990 – 1998
+
+			Asistí en representación del colegio a las actividades de simulaciones academicas de rondas de la ONU.
+
+			Actividades y asociaciones: Equipos de Voleibol, Tenis de Mesa, Grupo de debates académicos, grupo de teatro y danza.
+			Cursos
+			Universidad de León
+
+			    Sistemas de Gestion de Calidad ISO9001
+			    Implementacion de Sistemas de Gestion ISO18000
+			    Sistemas de Gestión Ambiental ISO14000 
+
+			SENA
+
+			    Variables y estructuras de Control en la Programación orientada a objetos (202051)
+			    Desarrollo de aplicaciones con Interfaz Gráfica, Manejo de Eventos, Clases y Objetos (238993)
+			    Desarrollo de Aplicaciones con Manejo de Datos en la Memoria (252585)
+			    Desarrollo de Aplicaciones con Manejo de Proceso Simultaneo y Uso de Menús (259377)
+			    Desarrollo de Applets/Aplicaciones con Uso de Base de Datos, Redes, Servlets y Multimedia (269315)
+			    Desarrollo de Aplicaciones con Manejo de Archivos de Texto y el Manejo de Excepciones en Java (256593)
+
+			SENA
+
+			    Gestion de la calidad y normas ISO 9000 (27710)
+			    Controles y Seguridad Informática (246922)
+
+			Escuela Naval 'Almirante Padilla'
+
+			    Cruceros de Practicas Profesionales
+		</div>
 		<div id="social_network">
 			<ul>
 				<li><a alt="Google+" href="https://plus.google.com/+SebastianReyesEspinosa/about" target="_blank" title=""><img src="../icons/google110.png" width='48' height='48'/></a></li>
