Se elimina codigo superfluo adicional, y se hacen varias pruebas de visibilidad de los elementos listados en una de las paginas

--- a/pages/academic_background.html
+++ b/pages/academic_background.html
@@ -42,23 +42,24 @@ Released   : 20130902
 		</div>
 	</div>
 	<div id="main">
-		<div id="welcome">
+<!-- 		<div id="welcome">
 			<div class="title">
-				<h2>Estudios Academicos</h2>
+				<h2>Logros Academicos</h2>
 				<span class="byline">Siempre en la busqueda de nuevos desafios personales y profesionales</span>
 			</div>
 			<p>Aqui listo mis estudios academicos</p>
-		</div>
+		</div> -->
 		<div id="featured">
 			<div class="title">
-				<h2>Maecenas lectus sapien</h2>
-				<span class="byline">Integer sit amet aliquet pretium</span>
+				<h2>Perfil Academico</h2>
+				<span class="byline">"El principal objeto de la educación no es el de enseñarnos a ganar el pan, sino en capacitarnos para hacer agradable cada bocado" - Anonimo</span>
 			</div>
 			<ul class="style1">
 				<li class="first">
-					<p class="date"><a href="#">Jan<b>05</b></a></p>
-					<h3>Amet sed volutpat mauris</h3>
-					<p><a href="#">Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Etiam non felis. Donec ut ante.</a></p>
+					<p class="date"><b>2007</b> - <b>2010</b></p>
+					<h2>Master en Ciencias de la Administracion</h2>
+					<h3>Universidad de León</h3>
+					<p>Postgrado de talla mundial, enfocado en la planeacion estrategica de organizaciones y proyectos.</p>
 				</li>
 				<li>
 					<p class="date"><a href="#">Jan<b>03</b></a></p>
@@ -78,9 +79,9 @@ Released   : 20130902
 			</ul>
 		</div>
 		<div>
-			Universidad de León
-			Master, Administracion de Empresas
-			2007 – 2010
+			
+			
+			
 			SENA
 			Lenguajes y técnicas de programación, Tecnologias de la Informacion y las Comunicaciones, Aprendizaje de tecnicas de programacion y lenguajes de desarrollo de software
 			2011 – 2012
@@ -93,6 +94,7 @@ Released   : 20130902
 			SENA
 			Introduccion a entornos Linux, Tecnologias de la informacion y las comunicaciones
 			2007 – 2007
+			
 			Escuela Naval 'Almirante Padilla'
 			Profesional, Ciencias Navales
 			1998 – 2001
