Se actualiza informacion mostrada en la pagina de logros academicos

--- a/pages/academic_background.html
+++ b/pages/academic_background.html
@@ -42,18 +42,12 @@ Released   : 20130902
 		</div>
 	</div>
 	<div id="main">
-<!-- 		<div id="welcome">
-			<div class="title">
-				<h2>Logros Academicos</h2>
-				<span class="byline">Siempre en la busqueda de nuevos desafios personales y profesionales</span>
-			</div>
-			<p>Aqui listo mis estudios academicos</p>
-		</div> -->
 		<div id="featured">
 			<div class="title">
 				<h2>Perfil Academico</h2>
 				<span class="byline">"El principal objeto de la educación no es el de enseñarnos a ganar el pan, sino en capacitarnos para hacer agradable cada bocado" - Anonimo</span>
 			</div>
+			<h1>Educacion Formal</h1>
 			<ul class="style1">
 				<li class="first">
 					<p class="date"><b>2007</b> - <b>2010</b></p>
@@ -62,75 +56,49 @@ Released   : 20130902
 					<p>Postgrado de talla mundial, enfocado en la planeacion estrategica de organizaciones y proyectos.</p>
 				</li>
 				<li>
-					<p class="date"><a href="#">Jan<b>03</b></a></p>
-					<h3>Sagittis diam dolor amet</h3>
-					<p><a href="#">Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie. Donec leo, vivamus fermentum nibh in augue praesent congue rutrum.</a></p>
+					<p class="date"><b>1998</b> - <b>2001</b></p>
+					<h2>Profesional en Administracion</h2>
+					<h3>Escuela Naval Almirante Padilla - Armada Nacional</h3>
+					<p>Profesional universitario en ciencias administrativas, enfocado en la gestion de recursos organizacionales claves y la planeacion estrategica en areas multidisciplinarias.</p>
 				</li>
 				<li>
-					<p class="date"><a href="#">Jan<b>01</b></a></p>
-					<h3>Amet sed volutpat mauris</h3>
-					<p><a href="#">Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Etiam non felis. Donec ut ante.</a></p>
+					<p class="date"><b>1998</b> - <b>2001</b></p>
+					<h2>Oficial Naval en el grado de Teniente de Coberbeta</h2>
+					<h3>Escuela Naval Almirante Padilla - Armada Nacional</h3>
+					<p>Profesional en ciencias militares con entrenamiento de excelencia a nivel fisico, tecnico, tactico y etico, enfocado en la obtencion de resultados, el liderazgo de equipos, el trabajo bajo presion y el desempeño de en entornos adversos.</p>
 				</li>
 				<li>
-					<p class="date"><a href="#">Dec<b>31</b></a></p>
-					<h3>Sagittis diam dolor amet</h3>
-					<p><a href="#">Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie. Donec leo, vivamus fermentum nibh in augue praesent congue rutrum.</a></p>
+					<p class="date"><b>1998</b></p>
+					<h2>Bachiller Academico</h2>
+					<h3>Colegio Luis Horacio Gomez</h3>
+					<p>Joven entregado a la sociedad como parte fundamental de su desarrollo presente y futuro.</p>
 				</li>
 			</ul>
-		</div>
-		<div>
-			
-			
-			
-			SENA
-			Lenguajes y técnicas de programación, Tecnologias de la Informacion y las Comunicaciones, Aprendizaje de tecnicas de programacion y lenguajes de desarrollo de software
-			2011 – 2012
-			SENA
-			Introduccion a los Sistemas de Gestion de Calidad, Administracion
-			2007 – 2007
-			SENA
-			Auditorias en Seguridad de la Informacion, Tecnologias de la Informacion y las Telecomunicaciones
-			2011 – 2011
-			SENA
-			Introduccion a entornos Linux, Tecnologias de la informacion y las comunicaciones
-			2007 – 2007
-			
-			Escuela Naval 'Almirante Padilla'
-			Profesional, Ciencias Navales
-			1998 – 2001
-
-			Actividades y asociaciones: Equipo de Voleyball, equipo de velas, grupo de informática, grupo de estudio en tecnología y electrónica
-			Colegio Luis Horacio Gomez
-			Bachiller Academico, Escolaridad Media
-			1990 – 1998
-
-			Asistí en representación del colegio a las actividades de simulaciones academicas de rondas de la ONU.
-
-			Actividades y asociaciones: Equipos de Voleibol, Tenis de Mesa, Grupo de debates académicos, grupo de teatro y danza.
-			Cursos
-			Universidad de León
-
-			    Sistemas de Gestion de Calidad ISO9001
-			    Implementacion de Sistemas de Gestion ISO18000
-			    Sistemas de Gestión Ambiental ISO14000 
-
-			SENA
-
-			    Variables y estructuras de Control en la Programación orientada a objetos (202051)
-			    Desarrollo de aplicaciones con Interfaz Gráfica, Manejo de Eventos, Clases y Objetos (238993)
-			    Desarrollo de Aplicaciones con Manejo de Datos en la Memoria (252585)
-			    Desarrollo de Aplicaciones con Manejo de Proceso Simultaneo y Uso de Menús (259377)
-			    Desarrollo de Applets/Aplicaciones con Uso de Base de Datos, Redes, Servlets y Multimedia (269315)
-			    Desarrollo de Aplicaciones con Manejo de Archivos de Texto y el Manejo de Excepciones en Java (256593)
-
-			SENA
-
-			    Gestion de la calidad y normas ISO 9000 (27710)
-			    Controles y Seguridad Informática (246922)
-
-			Escuela Naval 'Almirante Padilla'
-
-			    Cruceros de Practicas Profesionales
+			<h1>Educacion Continuada</h1>
+			<ul class="style1">
+				<li>
+					<p class="date"></p>
+					<h3>SENA</h3>
+					<p>Aprendizaje de tecnicas de programacion y lenguajes de desarrollo de software</p>
+					<p>Introduccion a los Sistemas de Gestion de Calidad</p>
+					<p>Auditorias en Seguridad de la Informacion</p>
+					<p>Introduccion a entornos Linux</p>
+				</li>
+				<li>
+					<p class="date"></p>
+					<h3>Universidad de León</h3>
+					<p>Sistemas de Gestion de Calidad ISO9001</p>
+					<p>Implementacion de Sistemas de Gestion ISO18000</p>
+					<p>Sistemas de Gestión Ambiental ISO14000 </p>
+				</li>
+				<li>
+					<p class="date"></p>
+					<h3>Armada Nacional</h3>
+					<p>Ciclos de conferencias con lideres de orden nacional</p>
+					<p>Crucero OpSail 2000 ARC Gloria</p>
+					<p>Embarques navales de practica profesional</p>
+				</li>
+			</ul>
 		</div>
 		<div id="social_network">
 			<ul>
