--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <!--
-Design by TEMPLATED
-http://templated.co
+Diseño creado por Sebastian Reyes Espinosa, basado en la plantilla
+publica creada por TEMPLATED - http://templated.co
 Released for free under the Creative Commons Attribution License
 
-Name       : Skeleton 
-Description: A two-column, fixed-width design with dark color scheme.
-Version    : 1.0
-Released   : 20130902
-
+Creado 2015-01-19
+Ultima actualizacion 2015-01-23
+Version 1.2.34
 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
